src/main/java/org/example/info_injun/global/error/ErrorResponse.java
package org.example.info_injun.global.error;

import lombok.Builder;

@Builder
public class ErrorResponse {
    private final int status;
    private final String code;
    private final String message;
}
